src/input.css
@import 'tailwindcss' source(none);

@source "input.css";
@source "../layouts";

@plugin '@tailwindcss/typography';
@plugin "daisyui" {
  themes: emerald --default, forest --prefersdark;
}

@custom-variant dark (&:where(.dark, .dark *));

@config '../tailwind.config.js';

html {
  scroll-behavior: smooth;
}

#disqus_thread iframe[src*='ads-iframe'] {
  display: none;
}

#dream-global-bg {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-position: center;
  background-size: cover;
  z-index: -1;
}

.flip-container {
  width: 100vw;
  /* The height of navbar is 112px (80px + 2rem). */
  height: calc(100vh - 80px - 2rem);
  max-width: 100%;
  perspective: 1000px;

  &.flip-it {
    .flipper {
      transform: rotateY(180deg);
    }

    .front {
      overflow: hidden;
    }

    .back {
      transform: translateX(0) rotateY(180deg);
    }
  }

  .flipper {
    position: relative;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: transform 0.75s;
  }

  .front,
  .back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    transition: transform 0.75s;
  }

  .front {
    transform: rotateY(0deg);
  }

  .back {
    /* Hack: set translateX to -25% to make the back page not overlap the TOC. */
    transform: translateX(-25%) rotateY(180deg);
  }
}

#TableOfContents {
  @apply sticky top-24;

  /* top-24 + 1rem */
  max-height: calc(100vh - 7rem);
  overflow-y: auto;
}

@supports (-moz-appearance: none) {
  #TableOfContents {
    position: initial;
  }
}

#TableOfContents ul {
  @apply menu menu-sm;
}

.mermaid-panzoom {
  @apply relative border border-transparent rounded-box;
}

.mermaid-panzoom:hover,
.mermaid-panzoom:focus-within {
  @apply border-base-300;
}

.mermaid-panzoom > .mermaid {
  @apply overflow-hidden;
}

.mermaid-panzoom-reset {
  @apply absolute z-1 right-2 bottom-2 opacity-0 pointer-events-none transition-opacity duration-150 ease-in-out;
}

.mermaid-panzoom:hover .mermaid-panzoom-reset,
.mermaid-panzoom:focus-within .mermaid-panzoom-reset {
  @apply opacity-100 pointer-events-auto;
}

.dream-alert {
  > .heading {
    @apply flex items-center gap-1 text-sm font-medium;
  }

  &.note {
    @apply border-s-blue-600 dark:border-s-blue-500;

    .heading {
      @apply text-blue-600 dark:text-blue-500;
    }
  }

  &.tip {
    @apply border-s-green-600 dark:border-s-green-500;

    .heading {
      @apply text-green-600 dark:text-green-500;
    }
  }

  &.important {
    @apply border-s-purple-600 dark:border-s-purple-500;

    .heading {
      @apply text-purple-600 dark:text-purple-500;
    }
  }

  &.warning {
    @apply border-s-yellow-600 dark:border-s-yellow-500;

    .heading {
      @apply text-yellow-600 dark:text-yellow-500;
    }
  }

  &.caution {
    @apply border-s-red-600 dark:border-s-red-500;

    .heading {
      @apply text-red-600 dark:text-red-500;
    }
  }
}

